@@ -1,8 +1,32 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX tvheadend.confd 355 SHA256 1dd2bed597ccb84e59beae0ec130287f31a4cc2c2e974708462f08d8885b2e5e SHA512 64ae0cca1e1b46a3ecb2fb4a4ba69ad1dd6a72ce57944b44be28768d293f9cca2ab29067335023f384433e8c75d976fbc4610ca574c930b9891a2f1c75ff4c0b WHIRLPOOL 156a098daf40f42098e3c6862ef307784a882a7e80e269525d702fd17a458b479911c41a3017621cf55cbd96d281fad0de1e6e59b6bb0f0d729cf94d2384343a
 AUX tvheadend.initd 375 SHA256 696dee0e0959cd2358b5250f89a9faf8db95172e55658ec8827e7d4999d0114e SHA512 df6b66aef890f18f3fb21900b7015e2bd4f4d876fd68a04198a9424aca0d61dea5febf503609e90d0cc1e8a4fdf139cabcb5b0ab0064423aeb7c366e3607e392 WHIRLPOOL 1dc4bd1bcacc01ff6e72cc01f7305c86dffccecfe189345ab99045521e39ff09af75a39dec702033179a113d3785db5431e706a31684f9a37c2ac47475abe575
+AUX tvheadend.service 304 SHA256 e4ed1f5a50620773cbffff9a22d6ea06311965a6ce139eb8d9f67df10986aecd SHA512 96c61ef4082ecf77ca17a377de3698ae2a47c29519e02676a28d1d2813d5f43dfc3b29d8b91a126a7b8da5f38a8dc2cf13044dba285e22235e7782053041207f WHIRLPOOL 704fb969e5d954330e12c1d4cafa588738cfac4c65d2a234cb8d9a46180a9e33ead0532d94d94fce4efaac566859ec21e4d6f548c56b42a89b7a4f82733a5b53
 DIST hts-tvheadend_2.12.tar.gz 1475053 SHA256 c2e33384b24356be036bf8e58a026efeed247b001d3674929dc0016bf2b0e11b SHA512 87808a57454b58f458e8e7db6d381e34917064a0f196ed4e91f2ee912575282e121ada72d11ce6c3f8c5e2913dc4510b0b1e6a7d252b702946c033ef35e85c68 WHIRLPOOL 953735a6796972dbf5a7b2f541fc07c7dc2666e4a15f007fdefd92b7445055c227ce8b570088e4fd0810ffebd3271a19af7fd023eb58dfd046b24d45be5053cc
 DIST tvheadend-3.2.tar.gz 2155532 SHA256 4bda0da2488c2078c6bd7e92ea5099c7c1e6c52fd361af965c83e82070cfb651 SHA512 f4f87a42c10bf9989606ca932ba916f9c70d0adfc1c0f6ee1f1dd3c23545de8e1699c4f519c56a7f5df0b27521d7f714c02ea5d30432756511baefb00ddd8d22 WHIRLPOOL 8dbf8c7eeff31b132f61d7ff8cf5412659e430e3fe47733ec54e7e804b8be608bd9886d8149975a91653608edeb641781e08c6f3df819dc08a4f7d96abe41dfb
+DIST tvheadend-3.4.27.tar.gz 2201905 SHA256 50438809ff43ab332d255248096e9531ac85e6c51511206a3f68cfc1697f4ead SHA512 fb6dc59fbaf5ea43f69452ff6b034ed80b040bb15f5c43f26a3f8075601066354f82e5cf15f7c5215adf1387edfa57468f71605aacfc0824a996aee108a0f11a WHIRLPOOL b0c92d8368cf7643a238d918752f8b1816ddcfde28372fecad228ab133d4e1dd6219d5b436c396fa4013af5269b2fd05b62bb6ce6180553d835204c8c38029ca
 EBUILD tvheadend-2.12.ebuild 1807 SHA256 2298b6ab7c75fc76957023c81b272fcec11dd1db602c32ec359599788d084cbf SHA512 37ac9605bd6016ea2db310425585b27f6b04ada50316ec7fc1e7564e7a6401eafd4f99a4562d70f861a53557e08e289d2ddfed31b4666856dd1d76dedef95c4f WHIRLPOOL 2cd5a1c3f1c0faf4b4236295f59100c6235862264248deb9bce185186287630812ad66b529e67be4c8ce41f6be598698ea32ffeddb9ffb87935ea4146ffbd913
-EBUILD tvheadend-3.2.ebuild 1759 SHA256 6a3acc79d40879ed5237924067b120df03be7e707b96c10c490a399b0351b690 SHA512 5a4c9547210528e99c4998e49dd40591188d93fa5c240a013f146627d43d2ab9c8c9e5f450ebab2771d03d8a60c95fd949f1639ab201429053a9fe02729829bc WHIRLPOOL 9a4dfe68195de567ab6898e5e5dff2be6c9a35b2f4e209225daa5217bc5ae34472844f19606c1387b4c61c36bc14e7652b51f11290cd10444fd7dbbf19b4ee30
-MISC ChangeLog 948 SHA256 80d5aaa8b2bdbbe01f1babba548aa0e06c825bd6630ccec16012964cd874ca13 SHA512 728acd1df7bfe765be02ffaf066e23bb58b7d04f00d9cf0e6982f24f012e812f04a63bb84946fccbca9309849966fc35ab754d02d88d0960460c23d0a39df307 WHIRLPOOL 4cd712cd5b23edcaedfac331d649a3ca4b7d91231e91cdfc9aaff2eebe202c614c08bf51995d0407c03b61c0178af90fae2ea999005844938e2b3001abd9f6cb
-MISC metadata.xml 342 SHA256 ef8886047057cfdbfb5ef59383994f160c693d5a5549326007eeadec6ae37f76 SHA512 032ff78f77fb34faee52b8c6e7e1411f8735e2d2b8bc1fe05e261f2095edb5347710b32bdbe5504882cb9fa83ad0dc7e877aa25b89e8f37f201007bd12f225c2 WHIRLPOOL 89844fbbd7430c55ede4d37fa52703fc701d3af1d6b3e3a616969dcc282955a8d70f7ee8ff74df9351915a68e6d7a1a8be80cf2bbe5658da927cd0713d219fe3
+EBUILD tvheadend-3.2.ebuild 1779 SHA256 574f814f39e0959b8bc3df56a0d470e71b5cac7cdbf0995f22b01540b44e9577 SHA512 366b94ec4ce2aee0a8390f5fc5c9ebfc99ceb02b6df8cdbd33f5c2c06b24d0d915e86c666fc126edd68f9f0072e5c13ac0c33442e2573f4ee54068c225372e8b WHIRLPOOL 5b9599f9263d0e4361b641f7879e90dc7891dd243f4784d0931da28e208ef3dc170eee38b12a1d9327ebc1129af3825a457c5dd67626143634939bf4fbf00db4
+EBUILD tvheadend-3.4.27.ebuild 2365 SHA256 d8f127ed39d6c490e5b052f158b150c7ee4ec7a839b9869d19e8621f4ab52627 SHA512 758c1a2c23a7a045ea4702eefbd5dd4b8a33db7dd4eacc7e66dbfd41aafe7cf752231455a01d1d6a1a5b1e6883a52b09462c748c9633360b9ab6b7713faac451 WHIRLPOOL bed3cfed4a18cd568529702af938979fce96882184eded69d07758838e259cde9e2f4e73151bc28e07b97fc22fb3eef09f3ca02cc5e7e214769eb1f4e0300ded
+EBUILD tvheadend-9999.ebuild 2116 SHA256 5f802b94756a3bd60bf6d0c074dd0636e2cf63a2ac600d1b2add247fa258a4ca SHA512 616a4a37bc7ad456b3d4fffe0f2ff21a03e2897066c554a9feb518faea3ffdddad4bc8d4159b41b4c6c54b1579e291953431ed491bec8e1f9871f87341d1e0b1 WHIRLPOOL c5f9bc806f647096537fc57cce8078f1de83026d0bd3eb7ed3d818b61b9c8788bd0bf5dae9c141331fd27822cf615bd61c200223ea0a5a0a3f2b0edfdb9f5ee0
+MISC ChangeLog 1236 SHA256 823f6800b35cd3b30a41d124f360dfcb73f0a51774df16a01815e218dab3ebb8 SHA512 13c9c0e0d231a9315d231915d09a6e81e42692eaaa049466c638385de94032bc82e6c3ed5ce9832fd83ad418c450409b30b245a9b52d927b6a0184cc3a2e7bfd WHIRLPOOL c10a661be8fe7e40b14768f12ee5f29f6afe4c32751f8ac6c77c8bf13aa2c76b355b0a298b02327ffbc4d4cf61924ab0dea5ef7f26c9e58c2227780ce702ae94
+MISC metadata.xml 613 SHA256 6189bd092170e1a1451ba81598fdd16f9fef94b544fb00b92a382573670ed736 SHA512 1b29068861e1bdb4c02873449e8e3a7fb05127e7ecc083bf42f5100280224b8174d13a4dcb379b29eedde634be7f8c696e19f72ad9a990df13b486068ae9af20 WHIRLPOOL ab9a689c587511b3e6b5aebc6ddcc63f7e43fe0d312d2f73f74d8f9cc4d50f2a5d29f3ac84bf5b32e77ffe8797ddf351d088ec91b9cd181b5e10423e1afa178e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQIcBAEBCAAGBQJTpfQgAAoJECRx6z5ArFrDHw8QAMf7ILlRQqe+t6XsCN3vtiWL
+cIX45KSPNahq+EFs47cZ7A1u76NzXKnKSU+TxGjFoPdFVLoDMVQKWlYTmxGJomjL
+8bAc+1OwTdT2pZIdfEY6QAPEAFdbtWhk98DI0rLhyzysz82J/S31i0K8LXS2XoM9
+EGh0Oqc/lMV1R7bgKClFkwfODyU88gu1UwZa/oFxCNEA6fpnAr5oex8gC58vupN6
+PyQGPVfnno5a4c+UkXEbd9DlUmGDObln9gbVGvH8CxWph//tL2HXH6+3LWe5IHlC
+7s6YEfvmDj3BwAcv1XhN6lJhe3h4pzH+f/N0VPkFRJvwTcnZG5kYT9XVQaioWXh3
+sZer8Y462MJ90CJ02kpOZUUvJvBwtXCERkx5QaHYEgviLHyqeJhkfjFhRoZ1XZzC
++52+us3iUveh7Xzix9sd93q4pvAp+G7a0PdQoCgZHkXWosHB+XB/qgMBaoJFa6rW
+PG/7mOowl6VoUvum2RAbDxU01jRnu6MbQ4KoKKcXAHgJMD03p7Mj0Ovew7QU6EUy
+bCu+cmPwLq8oZU7i1QQrDPz35J2hHcT10wACwXPDLYaPerg54v/7ENahdBmNWOXJ
+YsBlOXoK9Bt6OV/tdruu+BRmuye3GiAoD7bU+YVk2wrS1lbLtZeTpUd9XiYpA3r3
+QIcnVvIo0iiqnUSiNsl4
+=XANv
+-----END PGP SIGNATURE-----
