@@ -8,5 +8,9 @@
   </maintainer>
   <use>
     <flag name='xmltv'>Use <pkg>media-tv/xmltv</pkg></flag>
+    <flag name='ccache'>Use <pkg>dev-util/ccache</pkg></flag>
+    <flag name='dvbscan'>Use <pkg>media-tv/linuxtv-dvb-apps</pkg></flag>
+    <flag name='imagecache'>Enable support for image caching</flag>
+    <flag name='uriparser'>Use <pkg>dev-libs/uriparser</pkg></flag>
   </use>
 </pkgmetadata>
