@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/tvheadend/tvheadend-3.2.ebuild,v 1.1 2012/10/27 06:09:17 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/tvheadend/tvheadend-3.2.ebuild,v 1.2 2014/06/21 21:15:09 prometheanfire Exp $
 
 EAPI=4
 
@@ -8,7 +8,7 @@ inherit eutils toolchain-funcs user
 
 DESCRIPTION="A combined DVB receiver, Digital Video Recorder and Live TV streaming server"
 HOMEPAGE="https://www.lonelycoder.com/redmine/projects/tvheadend/"
-SRC_URI="https://github.com/downloads/${PN}/${PN}/${P}.tar.gz"
+SRC_URI="mirror://github/tvheadend/tvheadend/v${PV}.tar.gz -> ${P}.tar.gz"
 
 LICENSE="GPL-3"
 SLOT="0"
