@@ -8,6 +8,6 @@ KEYWORDS=~amd64 ~x86
 LICENSE=GPL-3
 RDEPEND=dev-libs/openssl virtual/linuxtv-dvb-headers avahi? ( net-dns/avahi ) zlib? ( sys-libs/zlib ) xmltv? ( media-tv/xmltv )
 SLOT=0
-SRC_URI=https://github.com/downloads/tvheadend/tvheadend/tvheadend-3.2.tar.gz
+SRC_URI=mirror://github/tvheadend/tvheadend/v3.2.tar.gz -> tvheadend-3.2.tar.gz
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=ea219066046590af922ea61eea7e589c
+_md5_=a689ef18961ec79885f01410ff48f1ad
