@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install postinst prepare setup unpack
+DEPEND=dev-libs/openssl avahi? ( net-dns/avahi ) ccache? ( dev-util/ccache ) curl? ( net-misc/curl ) dvb? ( virtual/linuxtv-dvb-headers ) ffmpeg? ( virtual/ffmpeg ) uriparser? ( dev-libs/uriparser ) zlib? ( sys-libs/zlib ) dev-vcs/git virtual/pkgconfig
+DESCRIPTION=Tvheadend is a TV streaming server and digital video recorder
+EAPI=5
+HOMEPAGE=https://tvheadend.org/
+IUSE=avahi ccache curl +dvb +dvbscan ffmpeg imagecache inotify uriparser xmltv zlib
+LICENSE=GPL-3
+RDEPEND=dev-libs/openssl avahi? ( net-dns/avahi ) ccache? ( dev-util/ccache ) curl? ( net-misc/curl ) dvb? ( virtual/linuxtv-dvb-headers ) ffmpeg? ( virtual/ffmpeg ) uriparser? ( dev-libs/uriparser ) zlib? ( sys-libs/zlib ) dvbscan? ( media-tv/linuxtv-dvb-apps ) xmltv? ( media-tv/xmltv )
+REQUIRED_USE=dvbscan? ( dvb ) imagecache? ( curl )
+SLOT=0
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	git-2	2027b81a576527fa16bece425941e094	git-r3	da25af7340478afdca16e1e4568b014a	linux-info	90944ede7e9761bd7ef07602acdef9e3	multilib	fac675dcccf94392371a6abee62d909f	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=f0ab62cc84a94ed53a9625f0188c2017
